--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
 # Datasource
-spring.datasource.url=jdbc:h2:file:/home/dcc603/dbh2locadora
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:8889/flyway
+spring.datasource.username=root
+spring.datasource.password=root
